examples/test/testpolicy1195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1195
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key29: value23
      key1: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value11
          key45: value12
      podSelector:
        matchLabels:
          key9: value19
